--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping List</title>
-    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,6 +15,7 @@
       src="https://kit.fontawesome.com/b9a00d1905.js"
       crossorigin="anonymous"
     ></script>
+    <script src="main.js" defer></script>
   </head>
   <body>
     <section class="list">
@@ -26,7 +26,7 @@
       <ul class="items"></ul>
       <button class="clear_btn">Clear Shopping List</button>
       <footer class="footer">
-        <form class="new-form">
+        <form class="new_form">
           <input type="text" class="footer__input" />
           <button type="submit" class="footer__button">
             <i class="fa-solid fa-plus"></i>
